After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 761004 - [PATCH] VPN secrets get lost
[PATCH] VPN secrets get lost
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Network
unspecified
Other Linux
: Normal major
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-01-22 20:57 UTC by Lubomir Rintel
Modified: 2016-01-26 17:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix (2.49 KB, patch)
2016-01-22 20:57 UTC, Lubomir Rintel
committed Details | Review

Description Lubomir Rintel 2016-01-22 20:57:23 UTC
Created attachment 319570 [details] [review]
Fix

When editing a VPN connections the secrets are not loaded.
Comment 1 Rui Matos 2016-01-25 16:16:23 UTC
Review of attachment 319570 [details] [review]:

Looks good, thanks!
Comment 2 Rui Matos 2016-01-26 17:51:12 UTC
I noticed after reviewing this that creating new VPN connections would
show up an empty editor but the root cause is a bug elsewhere that
this patch just uncovered. See commit 2e6149b .

Pushed this patch now, thanks again.