network: read secrets for the VPN connections

The VPN page needs secrets too. Don't initialize it until the secrets are
loaded, otherwise the secrets are lost on each connection edit.

https://bugzilla.gnome.org/show_bug.cgi?id=761004